ontol/ontol-compiler/test-cases/error/parser/stmt_invalid.on
foobar // ERROR parse error: found `foobar`, expected one of `use`, `def`, `rel`, `fmt`, `map`
